--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,20 @@ resolver = "2"
 
 members = [
     "crates/dscvr-tracing-util",
+    "crates/ic-identity-util",
     "crates/instrumented-error",
+    "crates/dscvr-interface",
 ]
 
 [workspace.dependencies]
+# Note: Need to leave ring at 0.16 for compatibility with ic-agent
+candid = "0.9"
+ic-agent = { version = "0.29.0", features = ["pem"] }
+ic-cdk = "0.11"
+lazy_static = "1.4"
+ring = "0.16"
+serde = "1.0"
+time = "0.3.17"
 tracing = "0.1"
 tracing-error = { version = "0.2", features = ["traced-error"] }
 tracing-stackdriver = "0.8"
