--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,20 +2,31 @@
 resolver = "2"
 
 members = [
+    "crates/dscvr-interface",
     "crates/dscvr-tracing-util",
+    "crates/ic-canister-io",
+    "crates/ic-canister-stable-storage",
     "crates/ic-identity-util",
     "crates/instrumented-error",
-    "crates/dscvr-interface",
 ]
 
 [workspace.dependencies]
 # Note: Need to leave ring at 0.16 for compatibility with ic-agent
+bincode = "1.3"
 candid = "0.9"
+derive_more = "0.99"
+flate2 = "1.0"
+futures = "0.3.25"
 ic-agent = { version = "0.29.0", features = ["pem"] }
 ic-cdk = "0.11"
 lazy_static = "1.4"
+num-traits = "0.2.15"
 ring = "0.16"
+rmp-serde = "1.1"
 serde = "1.0"
+serde_bytes = "0.11"
+tokio = "1.0"
+thiserror = "1.0"
 time = "0.3.17"
 tracing = "0.1"
 tracing-error = { version = "0.2", features = ["traced-error"] }
