--- a/crates/ic-canister-io/Cargo.toml
+++ b/crates/ic-canister-io/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "instrumented-error"
+name = "ic-canister-io"
 version = "0.1.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing-error.workspace = true
-tracing.workspace = true
