--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 
 members = [
+    "crates/dscvr-candid-generator",
     "crates/dscvr-interface",
     "crates/dscvr-tracing-util",
     "crates/ic-canister-io",
@@ -14,7 +15,10 @@ members = [
 [workspace.dependencies]
 # Note: Need to leave ring at 0.16 for compatibility with ic-agent
 bincode = "1.3"
-candid = "0.9"
+candid = { git = "https://github.com/dscvr-one/candid.git", rev = "65d73d6", features = [
+    "parser",
+] }
+convert_case = "0.1"
 derive_more = "0.99"
 flate2 = "1.0"
 futures = "0.3.25"
@@ -33,3 +37,6 @@ tracing = "0.1"
 tracing-error = { version = "0.2", features = ["traced-error"] }
 tracing-stackdriver = "0.8"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+[patch.crates-io]
+candid = { git = "https://github.com/dscvr-one/candid.git", rev = "65d73d6" }
