--- a/crates/dscvr-tracing-util/Cargo.toml
+++ b/crates/dscvr-tracing-util/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 tracing-error.workspace = true
 tracing-stackdriver.workspace = true
 tracing-subscriber.workspace = true
+tracing-tree = "0.2.1"
 tracing.workspace = true
