--- a/crates/dscvr-interface/Cargo.toml
+++ b/crates/dscvr-interface/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "instrumented-error"
+name = "dscvr-interface"
 version = "0.1.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing-error.workspace = true
-tracing.workspace = true
+candid.workspace = true
+ic-cdk.workspace = true
+lazy_static.workspace = true
+time.workspace = true
