--- a/crates/ic-ingress-validator-util/Cargo.toml
+++ b/crates/ic-ingress-validator-util/Cargo.toml
@@ -10,6 +10,7 @@ ic-agent.workspace = true
 ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dscvr-one/ic.git", rev = "cacda1", package = "ic-crypto-utils-threshold-sig-der" }
 ic-error-types = { git = "https://github.com/dscvr-one/ic.git", rev = "cacda1", package = "ic-error-types" }
 ic-http-endpoints-public = { git = "https://github.com/dscvr-one/ic.git", rev = "cacda1", package = "ic-http-endpoints-public" }
+ic-interfaces = { git = "https://github.com/dscvr-one/ic.git", rev = "cacda1", package = "ic-interfaces" }
 ic-types = { git = "https://github.com/dscvr-one/ic.git", rev = "cacda1", package = "ic-types" }
 ic-validator-ingress-message = { git = "https://github.com/dscvr-one/ic.git", rev = "cacda1", package = "ic-validator-ingress-message" }
 
