--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,12 @@ async-std = "1.12.0"
 async-trait = "0.1"
 # Note: Need to leave ring at 0.16 for compatibility with ic-agent
 bincode = "1.3"
-candid = { git = "https://github.com/dscvr-one/candid.git", rev = "65d73d6", features = [
+candid = { git = "https://github.com/dscvr-one/candid.git", rev = "0.9.3-3", features = [
     "parser",
+    "deepsize",
 ] }
 convert_case = "0.6"
-deepsize = { git = "https://github.com/dscvr-one/deepsize.git", rev = "822ba27", features = [
-    "candid",
+deepsize = { git = "https://github.com/dscvr-one/deepsize.git", rev = "0.2.0-candid-0.9.3-2", features = [
     "serde_bytes",
     "derive",
     "std",
@@ -57,4 +57,6 @@ tracing-stackdriver = "0.8"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [patch.crates-io]
-candid = { git = "https://github.com/dscvr-one/candid.git", rev = "65d73d6" }
+candid = { git = "https://github.com/dscvr-one/candid.git", rev = "0.9.3-3", features = [
+    "deepsize",
+] }
