--- a/crates/dscvr-canister-agent/Cargo.toml
+++ b/crates/dscvr-canister-agent/Cargo.toml
@@ -16,7 +16,6 @@ futures.workspace = true
 garcon = "0.2.3"
 hex = "0.4"
 ic-agent.workspace = true
-ic-test-state-machine-client = "3.0"
 serde_bytes.workspace = true
 serde.workspace = true
 thiserror.workspace = true
@@ -32,4 +31,10 @@ dscvr-canister-exports = { path = "../dscvr-canister-exports" }
 dscvr-interface = { path = "../dscvr-interface" }
 ic-canister-stable-storage = { path = "../ic-canister-stable-storage" }
 ic-identity-util = { path = "../ic-identity-util" }
+ic-test-state-machine-client = "=3.0.0"
 instrumented-error = { path = "../instrumented-error" }
+
+[build-dependencies]
+
+dscvr-candid-generator = { path = "../dscvr-candid-generator" }
+dscvr-tracing-util = { path = "../dscvr-tracing-util" }
