--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
   build:
     runs-on:
       group: rust-heavy
+    container: dscvrdocker/be-edge-base-builder
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
