fix: missing metamagic changes (#4)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,9 @@ jobs:
   build:
     runs-on:
       group: rust-heavy
+    container: dscvrdocker/be-edge-base-builder
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ env.RUST_VERSION }}
-      - uses: jwlawson/actions-setup-cmake@v1.13
       - name: Run
         run: ./build-scripts/build_and_test.sh
         env:
