--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "crates/ic-canister-logger",
     "crates/ic-canister-stable-storage",
     "crates/ic-identity-util",
+    "crates/ic-ingress-validator-util",
     "crates/ic-rc-principal",
     "crates/instrumented-error",
 ]
@@ -22,12 +23,12 @@ async-std = "1.12.0"
 async-trait = "0.1"
 # Note: Need to leave ring at 0.16 for compatibility with ic-agent
 bincode = "1.3"
-candid = { git = "https://github.com/dscvr-one/candid.git", rev = "65d73d6", features = [
+candid = { git = "https://github.com/dscvr-one/candid.git", rev = "0.9.3-3", features = [
     "parser",
+    "deepsize",
 ] }
-convert_case = "0.1"
-deepsize = { git = "https://github.com/dscvr-one/deepsize.git", rev = "822ba27", features = [
-    "candid",
+convert_case = "0.6"
+deepsize = { git = "https://github.com/dscvr-one/deepsize.git", rev = "0.2.0-candid-0.9.3-2", features = [
     "serde_bytes",
     "derive",
     "std",
@@ -37,7 +38,7 @@ enum-iterator = "1.2.0"
 flate2 = "1.0"
 futures = "0.3.25"
 ic-agent = { version = "0.25.0", features = ["pem"] }
-ic-cdk = "0.11"
+ic-cdk = "0.10"
 lazy_static = "1.4"
 num-traits = "0.2.15"
 ring = "0.16"
@@ -56,4 +57,4 @@ tracing-stackdriver = "0.8"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [patch.crates-io]
-candid = { git = "https://github.com/dscvr-one/candid.git", rev = "65d73d6" }
+candid = { git = "https://github.com/dscvr-one/candid.git", rev = "0.9.3-3" }
