--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,11 @@ async-std = "1.12.0"
 async-trait = "0.1"
 # Note: Need to leave ring at 0.16 for compatibility with ic-agent
 bincode = "1.3"
-candid = { git = "https://github.com/dscvr-one/candid.git", rev = "0.9.3-3", features = [
-    "parser",
-    "deepsize",
-] }
+candid = { git = "https://github.com/dscvr-one/candid.git", rev = "dscvr-2024-04-11-2" }
+candid_parser = { git = "https://github.com/dscvr-one/candid.git", rev = "dscvr-2024-04-11-2" }
 convert_case = "0.6"
-deepsize = { git = "https://github.com/dscvr-one/deepsize.git", rev = "0.2.0-candid-0.9.3-2", features = [
+deepsize = { git = "https://github.com/dscvr-one/deepsize.git", tag = "dscvr-2024-04-11-2", features = [
+    "candid",
     "serde_bytes",
     "derive",
     "std",
@@ -37,11 +36,11 @@ derive_more = "0.99"
 enum-iterator = "1.2.0"
 flate2 = "1.0"
 futures = "0.3.25"
-ic-agent = { version = "0.25.0", features = ["pem"] }
-ic-cdk = "0.10"
+ic-agent = { version = "0.34.0", features = ["pem"] }
+ic-cdk = "0.13"
 lazy_static = "1.4"
 num-traits = "0.2.15"
-ring = "0.16"
+ring = "0.17"
 rmp-serde = "1.1"
 rustc-hash = { version = "1.1" }
 serde = "1.0"
@@ -57,4 +56,5 @@ tracing-stackdriver = "0.8"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [patch.crates-io]
-candid = { git = "https://github.com/dscvr-one/candid.git", rev = "0.9.3-3" }
+candid = { git = "https://github.com/dscvr-one/candid.git", rev = "dscvr-2024-04-11-2" }
+candid_parser = { git = "https://github.com/dscvr-one/candid.git", rev = "dscvr-2024-04-11-2" }
