--- a/crates/dscvr-candid-generator/Cargo.toml
+++ b/crates/dscvr-candid-generator/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 candid.workspace = true
+candid_parser.workspace = true
 convert_case.workspace = true
 prettyplease = "0.2"
 quote = "1.0"
