--- a/crates/ic-ingress-validator-util/Cargo.toml
+++ b/crates/ic-ingress-validator-util/Cargo.toml
@@ -10,6 +10,13 @@ ic-agent.workspace = true
 ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "release-2024-04-17_23-01-query-stats", package = "ic-crypto-utils-threshold-sig-der" }
 ic-types = { git = "https://github.com/dfinity/ic.git", rev = "release-2024-04-17_23-01-query-stats", package = "ic-types" }
 ic-validator-ingress-message = { git = "https://github.com/dfinity/ic.git", rev = "release-2024-04-17_23-01-query-stats", package = "ic-validator-ingress-message" }
+ic-constants = { git = "https://github.com/dfinity/ic.git", rev = "release-2024-04-17_23-01-query-stats", package = "ic-constants" }
+ic-crypto-interfaces-sig-verification = { git = "https://github.com/dfinity/ic.git", rev = "release-2024-04-17_23-01-query-stats", package = "ic-crypto-interfaces-sig-verification" }
+ic-crypto-standalone-sig-verifier = { git = "https://github.com/dfinity/ic.git", rev = "release-2024-04-17_23-01-query-stats", package = "ic-crypto-standalone-sig-verifier" }
+ic-crypto-tree-hash = { git = "https://github.com/dfinity/ic.git", rev = "release-2024-04-17_23-01-query-stats", package = "ic-crypto-tree-hash" }
+ic-validator = { git = "https://github.com/dfinity/ic.git", rev ="release-2024-04-17_23-01-query-stats", package = "ic-validator" }
 
 ic-identity-util = { path = "../ic-identity-util" }
 instrumented-error = { path = "../instrumented-error" }
+thiserror.workspace = true
+hex = "0.4.3"
